font size changed to 17px for better cjk character readability. fix a bug in pagination href

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -34,7 +34,7 @@ td.code {
 html,
 body {
   font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 code,
